# fizz-buzz-every-language

./: FizzBuzz.cs  FizzBuzz.scala  README.md  fizzbuzz.asm  fizzbuzz.bas  fizzbuzz.clj  fizzbuzz.cob  fizzbuzz.dart  fizzbuzz.erl  fizzbuzz.ex  fizzbuzz.f90  fizzbuzz.factor  fizzbuzz.fs4  fizzbuzz.kt  fizzbuzz.lol  fizzbuzz.nim  fizzbuzz.pl  fizzbuzz.rkt  fizzbuzz.st  fizzbuzz.tcl
actionscript/: fizzbuzz.as
ada/: fizzbuzz.adb
agda/: FizzBuzz.agda
ansible/: fizzbuzz.yml
apl/: fizzbuzz.apl
ats/: fizzbuzz.dats
awk/: fizzbuzz.awk
batch/: fizzbuzz.bat
befunge/: fizzbuzz.bef
brainfuck/: README.md  hello_world.bf
cairo/: fizzbuzz.cairo
chapel/: fizzbuzz.chpl
clean/: fizzbuzz.icl
cmake/: CMakeLists.txt  main.c
coffeescript/: fizzbuzz.coffee
cpp/: fizzbuzz.cpp
crystal/: fizzbuzz.cr
csv/: fizzbuzz.csv
d/: fizzbuzz_d.d
docker/: fizzbuzz.dockerfile
eiffel/: fizzbuzz.e
elm/: fizzbuzz.elm
euphoria/: fizzbuzz.ex
freepascal/: fizzbuzz.pas
gameoflife/: fizzbuzz.rle
gdscript/: fizzbuzz.gd
gleam/: fizzbuzz.gleam
graphql/: query.graphql  schema.graphql
groovy/: fizzbuzz.groovy
haxe/: fizzbuzz.hx
html/: fizzbuzz.html
idris2/: fizzbuzz.idr
ini/: fizzbuzz.ini
j/: fizzbuzz.ijs
json/: fizzbuzz.json
julia/: fizzbuzz.jl
k/: fizzbuzz.k
kubernetes/: fizzbuzz.yaml
latex/: fizzbuzz.tex
lfe/: fizzbuzz.lfe
livescript/: fizzbuzz.ls
logo/: fizzbuzz.logo
make/: Makefile
malbolge/: README.txt
matlab/: fizzbuzz.m
mojo/: fizzbuzz.mojo
move/: fizzbuzz.move
nix/: fizzbuzz.nix
solana/: Cargo.toml  README.md  fizzbuzz.rs
(+36 files in other folders)
